# external-libs

./: .gitignore  HACKS.rst  README.rst  configure-libs.sh  configure-libs2.sh  cygwin.txt  extrae.sh  install-libs.sh  install-libs2.sh
cygwin/: do-external-cygwin.sh
sources/: CHANGES.rst  odpi-3.2.2.tar.gz.original
sources/libargp/: CMakeLists.txt  argp-eexst.c  argp-fmtstream.c  argp-fs-xinl.c  argp-help.c  argp-parse.c  argp-pin.c  argp-pvh.c  argp-xinl.c  argp.vcxproj  argp.vcxproj.filters  basename-lgpl.c  config.h  dirname-lgpl.c  stripslash.c
sources/libargp-20110921/: Makefile.in  aclocal.m4  configure
sources/libargp-20110921/autom4te.cache/: output.1  requests  traces.0  traces.1
sources/libargp-20110921/gllib/: Makefile.in
sources/libargp-20110921/glm4/: Makefile.in
sources/libargp-master/output/gllib/: fcntl.h  time.h  wchar.h
sources/libargp-master/output/gllib/sys/: time.h
sources/libargp-master/output/gltests/: test-environ  test-errno  test-fgetc  test-fputc  test-fread  test-getcwd-lgpl  test-ignore-value  test-lstat  test-open  test-setenv  test-stat  test-stdbool  test-stdio  test-stdlib  test-strings  test-symlink  test-sys_stat  test-sys_types  test-sysexits  test-unistd  test-unsetenv  test-vasnprintf
sources/libargp/src/: argp-fmtstream.h  argp-help.c  argp-parse.c  argp.h  getopt.c
sources/libjwt-1.16.0/libjwt/: CMakeLists.txt
sources/libjwt-1.16.0/m4/: doxygen.m4
sources/new/libargp-master/: .gitignore  x.sh
sources/new/libargp-master/gnulib/gllib/: Makefile.am  vasnprintf.c
sources/new/libargp-master/gnulib/gltests/: test-vasnprintf.c
sources/new/libargp-master/output/gllib/: alloca.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h
sources/new/libargp-master/output/gllib/sys/: stat.h  types.h
sources/new/libargp-master/output/gltests/: test-alloca-opt  test-argp  test-binary-io  test-close  test-dup2  test-fcntl-h  test-fdopen  test-float  test-fstat  test-fwrite  test-getdtablesize  test-getopt  test-gettimeofday  test-intprops  test-inttypes  test-malloc-gnu  test-malloca  test-memchr  test-pathmax  test-rawmemchr  test-sleep  test-stdalign  test-stddef  test-stdint  test-strchrnul  test-strerror  test-string  test-strnlen  test-sys_time  test-time  test-verify  test-vsnprintf  test-wchar
sources/old/: odpi-3.1.0.tar.gz.original
win_build/jansson-2.13.1/win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check.vcxproj  check.vcxproj.filters  cmake_install.cmake  jansson.sln  jansson.vcxproj  jansson.vcxproj.filters  janssonConfig.cmake  json_process.vcxproj  json_process.vcxproj.filters  simple_parse.vcxproj  simple_parse.vcxproj.filters  test_array.vcxproj  test_array.vcxproj.filters  test_chaos.vcxproj  test_chaos.vcxproj.filters  test_copy.vcxproj  test_copy.vcxproj.filters  test_dump.vcxproj  test_dump.vcxproj.filters  test_dump_callback.vcxproj  test_dump_callback.vcxproj.filters  test_equal.vcxproj  test_equal.vcxproj.filters  test_load.vcxproj  test_load.vcxproj.filters  test_load_callback.vcxproj  test_load_callback.vcxproj.filters  test_loadb.vcxproj  test_loadb.vcxproj.filters  test_number.vcxproj  (+11 more)
win_build/jansson-2.13.1/win_build/cmake/: janssonConfigVersion.cmake
win_build/libuv-1.44.2.gines/docs/code/: CMakeLists.txt
win_build/libuv-1.44.2.gines/include/: uv.h
win_build/libuv-1.44.2.gines/src/unix/: stream.c
win_build/libuv-1.44.2.gines/win_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
win_build/pcre2-10.40/: CMakeLists.txt  pcre2-8.vcxproj  pcre2-8.vcxproj.filters
win_build/pcre2-10.40/src/: pcre2posix.h
win_build/pcre2-10.40/win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestCustom.ctest  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PCRE2.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  pcre2-8-static.vcxproj  pcre2-8-static.vcxproj.filters  pcre2-config  pcre2-posix-static.vcxproj  pcre2-posix-static.vcxproj.filters  pcre2_grep_test.sh  pcre2_test.bat  pcre2_test.sh  pcre2grep.vcxproj  pcre2grep.vcxproj.filters  pcre2test.vcxproj  pcre2test.vcxproj.filters
win_build/pcre2-10.40/win_build/cmake/: pcre2-config-version.cmake  pcre2-config.cmake
windows/: CMakeLists.txt  clona-yuneta-github.sh  do-external-windows.sh
windows/scripts/: windows-commit.sh  windows-pull.sh  windows-push.sh  windows-status.sh  yuneta-commit.sh  yuneta-pull-from-github.sh  yuneta-push.sh  yuneta-status.sh
